--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -119,9 +119,10 @@ Changes for v2.02
 - Added support for MAXQ612 processor (Graham)
 - Added support for the new format for type 0xDB segments used in URC-7962 (Graham)
 - Added support for the new learned signal format used in the URC-7962 (Graham)
--- Final Release
-- Upgrade to DecodeIR 2.44
-- Upgrade to JP12Serial 0.19
+-- Version 2.02a
+- Upgrade to DecodeIR 2.44 (with suppport for 64-bit Java on 64-bit Windows)
+- Upgrade to JP12Serial 0.19 (with support for 64-bit Java on 64-bit Windows)
+
 
 Changes for v2.01
 -- Alpha --
