--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+Changes for v2.03
+-- Alpha 8 --
+- Add support for XSight Lite and ARRX12G, remotes that have a direct USB interface.
+- Note that Alphas prior to Alpha 8 were not uploaded to the SVN and were early stages in this development.
+- An updated version of jp12serial, not yet publicly released, is needed to access this new support.  
+
+
 Changes for v2.02
 -- Alpha --
 - Fix bug that prevented fixed data being tested on download (Graham)
