- Fix bug in Alpha 8 that caused downloading to hang if no Favorites are set (Graham). - Update version to v2.03 Alpha 9 (Graham).
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1145 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,8 @@ Changes for v2.03
 - Add support for XSight Lite and ARRX12G, remotes that have a direct USB interface.
 - Note that Alphas prior to Alpha 8 were not uploaded to the SVN and were early stages in this development.
 - An updated version of jp12serial, not yet publicly released, is needed to access this new support.  
-
+-- Alpha 9 --
+- Fix bug in Alpha 8 that caused downloading to hang if no Favorites are set.
 
 Changes for v2.02
 -- Alpha --
