--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,10 @@ Changes for v2.03
 - An updated version of jp12serial, not yet publicly released, is needed to access this new support.  
 -- Alpha 9 --
 - Fix bug in Alpha 8 that caused downloading to hang if no Favorites are set.
+-- Alpha 10 --
+- Change reading of USB port for XSight remotes to use javahidapi rather than modified jp12serial (3FG)
+- Change form of signature for XSight remotes to be "USB" + PID value returned by HID interface (Graham)
+- Begin support for XSight Touch, displaying data in General, Device and Raw Data tabs (Graham)
 
 Changes for v2.02
 -- Alpha --
