- A few minor bugfixes.  Version updated to v2.03 Alpha 11 (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1147 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,8 @@ Changes for v2.03
 - Change reading of USB port for XSight remotes to use javahidapi rather than modified jp12serial (3FG)
 - Change form of signature for XSight remotes to be "USB" + PID value returned by HID interface (Graham)
 - Begin support for XSight Touch, displaying data in General, Device and Raw Data tabs (Graham)
+-- Alpha 11 --
+- A few minor bugfixes (Graham)
 
 Changes for v2.02
 -- Alpha --
