- More prototype support for XSight Touch.  Will now display macro data, will upload to the remote but only edits to device data get through to the upload (Graham) - More work to be done before Alpha 12 issued.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1148 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,8 @@ Changes for v2.03
 - Begin support for XSight Touch, displaying data in General, Device and Raw Data tabs (Graham)
 -- Alpha 11 --
 - A few minor bugfixes (Graham)
+-- Alpha 12 --
+- More prototype support for XSight Touch.  Will now display macro data, will upload to the remote but only edits to device data get through to the upload (Graham)
 
 Changes for v2.02
 -- Alpha --
