- Fixed bug for XSight Lite and similar when there is an upgrade consisting solely of learns (Graham) - Changed compile target in build.xml from Java SE5 to Java SE6 (Graham) - Added maps up to 584 to digitmaps.bin (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1227 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -20,6 +20,10 @@ Changes for v2.03
 - Fixed issue with editing and cloning macros of non-XSight remotes, caused by the XSight development (Graham)
 - Uploading of system files to XSight Touch now shows the Uploading progress bar, as for other uploads (Graham)
 - Fixed issues arising when importing upgrades for non-XSight remotes into XSight ones (Graham)
+-- Alpha 23
+- Make activity data for JP3 remotes be read-only, as updating the E2 data has no effect (Graham)
+- Show a (very rough) memory usage for XSight Touch on the progress bar, previously left empty for such remotes (Graham)
+- Update digitmaps to 584 (Graham)
 
 Changes for v2.02
 -- Alpha --
