- Add Linux support for direct download of Simpleset remotes (Marcin/Graham) - Replace addPropertyChangeListener by AddRMPropertyChangeListener in RMPanel and descendents to prevent conflict with certain Swing logic (Marcin)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1243 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -26,6 +26,7 @@ Changes for v2.03
 - Update digitmaps to 584 (Graham)
 -- Alpha 24
 - Adds support for Simpleset remotes using modules provided by Marcin, aka yaworski (Graham)
+- Replace addPropertyChangeListener by AddRMPropertyChangeListener in RMPanel and descendents to prevent conflict with certain Swing logic (Marcin)
 
 Changes for v2.02
 -- Alpha --
