- Handle simpleset remotes that allow for setup codes > 0x0FFF (Graham) - Upgrade version to v2.03 Alpha 24 Test 8 (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1255 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -27,6 +27,8 @@ Changes for v2.03
 -- Alpha 24
 - Adds support for Simpleset remotes using modules provided by Marcin, aka yaworski (Graham)
 - Replace addPropertyChangeListener by AddRMPropertyChangeListener in RMPanel and descendents to prevent conflict with certain Swing logic (Marcin)
+- Update digitmaps to 623 (Graham)
+- Handle simpleset remotes that allow for setup codes > 0x0FFF (Graham)
 
 Changes for v2.02
 -- Alpha --
