--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -42,11 +42,12 @@ Changes for v2.03
 - Add a Copy button to Learned Signals panel for additional support for this copy/paste operation (Graham)
 - Fix bug preventing Fav/Scan tab showing in some cases when it should be shown (Graham)
 - Allow .ir files in Recent Files list of RMIR, and .txt files in that of RM (Graham)
--- Beta
+-- Alpha 27
 - Show read-only settings in gray (Graham)
 - Fix issue where certain RDFs with spaces in unexpected places were generating errors (Graham)
 - Ensure a default value for Fav Device always shows in Fav/Scan tab (Graham)
 - Add MAXQ610 code to OrtekMCE protocol (Dave Reed)
+- Fix bug in Hex.parseHex( String ) when string is a hex value with a final 'h' indicator (Graham)
 
 Changes for v2.02
 -- Alpha --
