- Fix bug when loading FavScan with AdvCodeBindFormat=LONG and Fav Device = <none> (Graham) - Update version to v2.03 Alpha 27b (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1298 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -48,6 +48,7 @@ Changes for v2.03
 - Ensure a default value for Fav Device always shows in Fav/Scan tab (Graham)
 - Add MAXQ610 code to OrtekMCE protocol (Dave Reed)
 - Fix bug in Hex.parseHex( String ) when string is a hex value with a final 'h' indicator (Graham)
+- Fix bug when loading FavScan with AdvCodeBindFormat=LONG and Fav Device = <none> (Graham)
 
 Changes for v2.02
 -- Alpha --
