- Add further keyboard or mouse alternatives for certain actions (Graham) - Add support for segment type 0x0F (Graham) - Add confirmation request when installing an extender over an apparently different one for same remote (Graham) - Update to build 11 (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1314 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -68,6 +68,7 @@ Changes for v2.03
 - Make tooltips on tables remain for 5 minutes or until cell (or sometimes tooltip) exited (Graham)
 - Add space after each {pause} in Fav/Scan listing (Graham)
 - Add keyboard or mouse alternatives for certain actions (Graham)
+- Add support for segment type 0x0F (Graham)
 
 Changes for v2.02
 -- Alpha --
