- Make Fixed Data only concern bits not set by any Setting (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1347 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -83,6 +83,7 @@ Changes for v2.03
 - Change several confirmation dialogs to default to the No button (Graham)
 - Add a new startup parameter "-errors" analogous to "-properties" to specify the error file (Graham)
 - Give error message on an attempt to save to a read-only file (Graham)
+- Make Fixed Data only concern bits not set by any Setting (Graham)
 
 Changes for v2.02
 -- Alpha --
