- Amend UpdateChecker to handle builds and to make the hyperlink work properly (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1349 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -86,6 +86,7 @@ Changes for v2.03
 - Make Fixed Data only concern bits not set by any Setting (Graham)
 - Support upgrades with keymoves for Input Raw of Device Upgrade Editor (Graham)
 - Remove the Set Baseline button of Raw Download panel as it serves no purpose (Graham)
+- Amend UpdateChecker to handle builds and to make the hyperlink work properly (Graham)
 
 Changes for v2.02
 -- Alpha --
