- Make row selection persist after deletion in KeyMove tab, to align with other tabs (Graham) - Fix bug in PioneerMixTranslator (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1356 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -88,6 +88,8 @@ Changes for v2.03
 - Remove the Set Baseline button of Raw Download panel as it serves no purpose (Graham)
 - Amend UpdateChecker to handle builds and to make the hyperlink work properly (Graham)
 - Fix bug erroneously preventing macros being put on shifted buttons in certain situations (Graham)
+- Make row selection persist after deletion in KeyMove tab, to align with other tabs (Graham)
+- Fix bug in PioneerMixTranslator (Graham)
 
 Changes for v2.02
 -- Alpha --
