- Change of Look and Feel may need RMIR to be closed and re-opened, so added dialog to say so and to allow cancellation (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1361 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -90,6 +90,8 @@ Changes for v2.03
 - Fix bug erroneously preventing macros being put on shifted buttons in certain situations (Graham)
 - Make row selection persist after deletion in KeyMove tab, to align with other tabs (Graham)
 - Fix bug in PioneerMixTranslator (Graham)
+-- Release build 2
+- Change of Look and Feel may need RMIR to be closed and re-opened, so added dialog to say so and to allow cancellation (Graham)
 
 Changes for v2.02
 -- Alpha --
